# SAD-NNs

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
WIP-minigrid/: collect-data.ipynb  collect-data2.ipynb  dqn-north-grow-and-prune.py  dqn-north-uncertainty grow-and-prune.py  dqn-north-uncertainty.py  env-test.py  growth-experiment.py  growth-prune-experiment.py  minigrid-dqn.py  minigrid-ppo.py  minigrid-test-ppo.py  minigrid-test.py  north-ppo.py  run-vectorized.py
experiments/: env-test.py  growth-experiment.py  minigrid-test.py  north-ppo.py
runs2/WallEnv-v0__minigrid-test-ppo__1__1709842637/: results.csv
runs2/WallEnv-v0__minigrid-test-ppo__1__1709850844/: results.csv
runs2/WallEnv-v0__minigrid-test-ppo__1__1709862864/: results.csv
runs2/WallEnv-v0__minigrid-test-ppo__1__1709869087/: results.csv
runs2/WallEnv-v0__minigrid-test-ppo__1__1709873932/: results.csv
runs2/WallEnv-v0__minigrid-test-ppo__1__1709879765/: results.csv
runs2/WallEnv-v0__minigrid-test-ppo__1__1709887274/: results.csv
runs2/WallEnv-v0__minigrid-test-ppo__1__1709896508/: results.csv
runs3/WallEnv-v0__minigrid-test-ppo__1__1710124110/: results.csv
runs3/WallEnv-v0__minigrid-test-ppo__1__1710130526/: results.csv
runs3/WallEnv-v0__minigrid-test-ppo__1__1710133972/: results.csv
runs3/WallEnv-v0__minigrid-test-ppo__1__1710138111/: results.csv
sad_nns/: david_north_edl.ipynb  experiment_NORTH.py  network_size_testing.ipynb  north_and_edl.ipynb  north_and_edl_working.ipynb  north_example.ipynb  north_init.ipynb  uncertainty.py
sad_nns/envs/: __init__.py  door.py  hardwall.py  hporegression.py  minefield.py  simple.py  wall.py  wall2.py  wrappers.py
sad_nns/experiments/: data.py  models.py
sad_nns/hpo/: README.md  TD3_hpo.py  cleanrl_hpo.py  config.toml  env_grid_test.ipynb  environment.py  path.ipynb  ppo_hpo_lstm.py  sac_actor.py  sac_hpo.py  sweep_data_0.csv  sweep_data_1.csv  test.ipynb
sad_nns/modules/: __init__.py  ppoagent.py  qnetwork.py
sad_nns/north/: animbatch.py  batch.py  experiment_NORTH.py  maze.py  north_example.ipynb  north_exp.ipynb  north_init.ipynb  plot_graphs.ipynb  screenrc  timed_growth.ipynb
sad_nns/utils/: __init__.py  recurrent_buffer.py
(+1842 files in other folders)
