[tool.poetry]
name = "sad_nns"
version = "0.1.0"
description = "Self-Aware Developmental Neural Networks"
authors = ["rhit-luttredn <luttredn@rose-hulman.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
neurops = { path = "external/NeurOps/pytorch" }
labml-nn = { path = "external/annotated_deep_learning_paper_implementations" }
charset-normalizer = "^3.3.0"
chardet = "^5.2.0"
torch = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
